# poedit

./: .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  .version  AUTHORS  COPYING  ChangeLog  DEPENDENCIES  Makefile.am  Makefile.in  NEWS  Poedit.Targets  Poedit.props  Poedit.sln  Poedit.slnx  Poedit.vcxproj  Poedit.vcxproj.filters  Poedit2.sln  README  README.md  SECURITY.md  SUPPORT.md  TODO  aclocal.m4  autogen.sh  banner.xcf  bootstrap  build.properties  build.xml  chversion.sh  configure  configure.ac  configure.in  crowdin.yaml  make-distrib.sh  net.poedit.Poedit.appdata.xml  net.poedit.Poedit.desktop  (+6 more)
artwork/: Makefile.am  README
artwork/AppIcon.sketch/: Data  metadata
artwork/DocumentIcon.sketch/: Data  metadata
artwork/macos/: PoeditStyleKit.pcvd  StyleKit.h  StyleKit.m
docs/en/: Makefile.am  basics.html  index.html  manager.html  menu.html  poedit.css  poedit.hhc  poedit.hhp  settings.html  tm.html  ui.html  update.html
docs/hr/: Makefile.am  basics.html  index.html  manager.html  menu.html  poedit.hhc  poedit.hhp  settings.html  tm.html  ui.html  update.html
gettext-runtime/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gettext-runtime/doc/: ChangeLog  Makefile.in  matrix.texi  nls.texi
gettext-runtime/gnulib-lib/: Makefile.am  Makefile.in  basename.c  basename.h  canonicalize-lgpl.c  fwriteerror.c  iconv_open.c  localename.c  localename.h  mbchar.h  mbsinit.c  mbslen.c  mbsstr.c  progname.h  progreloc.c  propername.h  ref-add.sin  stdbool.in.h  stdlib.in.h  striconv.c  strnlen1.h  trim.h  unistd.in.h  unitypes.in.h  wctype.in.h  xreadlink.c  xstriconv.c
gettext-runtime/gnulib-m4/: 00gnulib.m4  atexit.m4  eealloc.m4  gnulib-comp.m4  locale-fr.m4  mbchar.m4  mbstate_t.m4  memchr.m4  memmove.m4  multiarch.m4  sigpipe.m4  stdio_h.m4  stdlib_h.m4  strtoul.m4  unistd_h.m4  warn-on-use.m4  wchar_h.m4  wcwidth.m4
gettext-runtime/intl/: ChangeLog  Makefile.in  dcigettext.c  libgnuintl.in.h  localcharset.c  osdep.c  plural-exp.h  plural.c  vasnprintf.c
gettext-runtime/intl-csharp/: ChangeLog  Makefile.in  intl.cs
gettext-runtime/intl-java/: Makefile.in
gettext-runtime/libasprintf/: ChangeLog  Makefile.gnulib  Makefile.in  aclocal.m4  asprintf.c  autosprintf.in.h  autosprintf.info  autosprintf.texi  config.h.in  configure  configure.ac  dummy.c  lib-asprintf.c  size_max.h  texi2html  vasprintf.c
gettext-runtime/m4/: ChangeLog  Makefile.am  Makefile.in
gettext-runtime/man/: ChangeLog  Makefile.am  Makefile.in  bind_textdomain_codeset.3  bind_textdomain_codeset.3.html  bindtextdomain.3  envsubst.1  envsubst.1.html  gettext.1.html.in  gettext.1.in  gettext.3  help2man  ngettext.1.in  ngettext.3  ngettext.3.html  textdomain.3
gettext-runtime/po/: ChangeLog  LINGUAS  be.gmo  be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gettext-runtime.pot  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  (+40 more)
gettext-runtime/src/: ChangeLog  Makefile.in  gettext.sh.in  ngettext.c
gettext-runtime/tests/: ChangeLog  Makefile.am  Makefile.in  test-lock.c
icons/: Makefile.am  generate-icons.make
locales/: Makefile.am  README  af.po  af_ZA.po  am.po  an.po  ar.po  ast.po  az.po  bb.po  be.po  be@latin.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  ca_ES@valencia.po  ckb.po  co.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_PR.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  fr.po  fur.po  fy_NL.po  ga.po  gl.po  he.po  (+58 more)
locales/win/: windows_strings-Afrikaans.rc  windows_strings-Albanian.rc  windows_strings-Arabic.rc  windows_strings-Armenian.rc  windows_strings-Azeri.rc  windows_strings-Basque.rc  windows_strings-Belarusian.rc  windows_strings-Bosnian.rc  windows_strings-Bulgarian.rc  windows_strings-Catalan.rc  windows_strings-Chinese_Simplified.rc  windows_strings-Chinese_Traditional.rc  windows_strings-Corsican.rc  windows_strings-Croatian.rc  windows_strings-Czech.rc  windows_strings-Danish.rc  windows_strings-Dutch.rc  windows_strings-English_UK.rc  windows_strings-Estonian.rc  windows_strings-Finnish.rc  windows_strings-French.rc  windows_strings-Frisian.rc  windows_strings-Galician.rc  windows_strings-Georgian.rc  windows_strings-German.rc  windows_strings-Greek.rc  windows_strings-Hebrew.rc  windows_strings-Hungarian.rc  windows_strings-Icelandic.rc  windows_strings-Indonesian.rc  windows_strings-Irish.rc  windows_strings-Italian.rc  windows_strings-Japanese.rc  windows_strings-Kazakh.rc  windows_strings-Korean.rc  windows_strings-Latvian.rc  windows_strings-Lithuanian.rc  windows_strings-Malay.rc  windows_strings-Norwegian_Bokmal.rc  windows_strings-Occitan.rc  (+22 more)
locales/wxwin/: ca.mo  da.mo  de.mo  eu.mo  fi.mo  id.mo  it.mo  nb_NO.mo  pl.mo  sv.mo
poedit/: .cvsignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  chversion.sh  configure  configure.in  logo.xcf  make-distrib.sh  makefile_win32.bkl  poedit.dsp  poedit.dsw
poedit/admin/: acinclude.m4  berkeley_db.m4
poedit/docs/: Makefile.am  Makefile.in  advertising.txt  basics.html  index.html  manager.html  menu.html  poedit.1  poedit.chm  poedit.css  poedit.hhc  poedit.hhp  settings.html  (+4 more)
src/: Makefile.am  Poedit-Prefix.pch  ThreadPool.h  accounts_ui.cpp  accounts_ui.h  app_updates.cpp  app_updates.h  attentionbar.cpp  attentionbar.h  cat_operations.cpp  cat_operations.h  cat_sorting.cpp  cat_sorting.h  cat_update.cpp  cat_update.h  catalog.cpp  catalog.h  catalog_json.cpp  catalog_json.h  catalog_po.cpp  catalog_po.h  catalog_qt.cpp  catalog_qt.h  catalog_qt_plurals.h  catalog_resx.cpp  catalog_resx.h  catalog_xcloc.cpp  catalog_xcloc.h  catalog_xliff.cpp  catalog_xliff.h  chooselang.cpp  chooselang.h  cloud_accounts.cpp  cloud_accounts.h  cloud_accounts_ui.cpp  cloud_accounts_ui.h  cloud_sync.h  colorscheme.cpp  colorscheme.h  commentdlg.cpp  (+138 more)
(+11324 files in other folders)
