
ACLOCAL_AMFLAGS = -I admin

SUBDIRS = src docs locales artwork

desktopdir=$(datadir)/applications
dist_desktop_DATA = poedit.desktop poedit-uri.desktop

appdatadir=$(datadir)/appdata
dist_appdata_DATA = poedit.appdata.xml

EXTRA_DIST = \
	deps/json/LICENSE.MIT \
	deps/json/src/json.hpp \
	deps/pugixml/LICENSE.md \
	deps/pugixml/src/pugiconfig.hpp \
	deps/pugixml/src/pugixml.cpp \
	deps/pugixml/src/pugixml.hpp \
	bootstrap
