
ACLOCAL_AMFLAGS = -I admin

SUBDIRS = src docs locales artwork

desktopdir=$(datadir)/applications
dist_desktop_DATA = net.poedit.Poedit.desktop net.poedit.PoeditURI.desktop

metainfodir=$(datadir)/metainfo
dist_metainfo_DATA = net.poedit.Poedit.appdata.xml

EXTRA_DIST = \
	deps/json/LICENSE.MIT \
	deps/json/single_include/nlohmann/json.hpp \
	deps/dtl/COPYING \
	deps/dtl/dtl/Diff3.hpp \
	deps/dtl/dtl/Diff.hpp \
	deps/dtl/dtl/dtl.hpp \
	deps/dtl/dtl/functors.hpp \
	deps/dtl/dtl/Lcs.hpp \
	deps/dtl/dtl/Sequence.hpp \
	deps/dtl/dtl/Ses.hpp \
	deps/dtl/dtl/variables.hpp \
	deps/pugixml/LICENSE.md \
	deps/pugixml/src/pugiconfig.hpp \
	deps/pugixml/src/pugixml.cpp \
	deps/pugixml/src/pugixml.hpp \
	README.md \
	bootstrap
